[project]
name = "leetcode"
version = "0.1.0"
description = "LeetCode solutions in Python"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Gustavo Saiani" }]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = []
